# StaticProgramAnalyser-project

./: CMakeLists.txt  Contact.csv  README.md  Readme.txt  build.sh  normalizeTestFormat.py  systest.py  systest.sh  unittest.sh
src/autotester/: CMakeLists.txt
src/autotester/src/: TestWrapper.cpp  TestWrapper.h
src/integration_testing/src/: ConstructAST.cpp  ConstructAST.h  TestPKB-Qeval.cpp
src/spa/: CMakeLists.txt
src/spa/src/: Exception.h  PKB.h  Visitor.h
src/spa/src/ast/: DesignExtractor.cpp  DesignExtractor.h
src/spa/src/ast/extractors/: ASTToString.cpp  ASTToString.h  CFGExtractor.cpp  CFGExtractor.h  CallExtractor.cpp  CallExtractor.h  CfgVisitor.h  FollowExtractor.cpp  FollowExtractor.h  InterproceduralNextExtractor.cpp  InterproceduralNextExtractor.h  ModifyExtractor.cpp  ModifyExtractor.h  NameExtractor.cpp  NameExtractor.h  NextExtractor.cpp  NextExtractor.h  ParentExtractor.cpp  ParentExtractor.h  ProcedureNameExtractor.cpp  ProcedureNameExtractor.h  ProcedureStatementExtractor.cpp  ProcedureStatementExtractor.h  UseExtractor.cpp  (+8 more)
src/spa/src/common/: EntityId.cpp  EntityId.h  Mapper.h  RelationId.h  SPAAssert.h
src/spa/src/parser/: AST.cpp  AST.h  Combinator.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
src/spa/src/pkb/: AffectClosureEvaluator.cpp  AffectClosureEvaluator.h  AffectEvaluator.cpp  AffectEvaluator.h  CallGraph.h  ControlFlowGraph.cpp  ControlFlowGraph.h  InteproceduralAffectClosureEvaluator.cpp  InterproceduralAffectClosureEvaluator.h  InterproceduralAffectEvaluator.cpp  InterproceduralAffectEvaluator.h  InterproceduralNextClosureEvaluator.cpp  InterproceduralNextClosureEvaluator.h  ModifyProcessor.cpp  ModifyProcessor.h  NextClosureEvaluator.cpp  NextClosureEvaluator.h  PKBTable.h  PKBTableManager.h  RealtimeEvaluator.h  UseProcessor.cpp  UseProcessor.h
src/spa/src/query_evaluator/: Clause.cpp  Clause.h  Evaluator.cpp  Evaluator.h  Relation.cpp  Relation.h  ResultTable.cpp  ResultTable.h  TableCacher.cpp  TableCacher.h
src/unit_testing/: CMakeLists.txt
src/unit_testing/src/: ConstructAST.cpp  ConstructAST.h  DebugUtil.h  TestAffectClosureEvaluator.cpp  TestAffectEvaluator.cpp  TestAotPKBTable.cpp  TestCallGraph.cpp  TestCombinator.cpp  TestControlFlowGraph.cpp  TestEvaluator.cpp  TestExtractor.cpp  TestFollowExtractor.cpp  TestInterproceduralAffectClosureEvaluator.cpp  TestInterproceduralAffectEvaluator.cpp  TestInterproceduralNext.cpp  TestInterproceduralNextClosureEvaluator.cpp  TestLexer.cpp  TestLinkedRelations.cpp  TestModifyTable.cpp  TestNameExtractor.cpp  TestNextClosureEvaluator.cpp  TestNextExtractor.cpp  TestParentExtractor.cpp  TestParentTable.cpp  TestParser.cpp  TestProcedureNameExtractor.cpp  TestProcedureStatementExtractor.cpp  TestRealtimePKBTable.cpp  TestResultTable.cpp  TestSemanticError.cpp  TestStatementIdNormalizer.cpp  TestStatementInformationExtractor.cpp  TestStatementTypeExtractor.cpp  TestTableCacher.cpp  TestUses.cpp
(+11 files in other folders)
